Upgrade solar-parent/JDK 16 and simplify enabling preview features